Summary of important user-visible changes for version 4.2:
---------------------------------------------------------

 ** Octal ('\NNN') and hex ('\xNN') escape sequences in single quoted
    strings are now interpreted by the function do_string_escapes().
    The *printf family of functions now supports octal and hex escape
    sequences in single-quoted strings for Matlab compatibility.

 ** mkfifo now interprets the MODE argument as an octal, not decimal, integer.
    This is consistent with the equivalent shell command. 

 ** Other new functions added in 4.2:

      psi


Summary of important user-visible changes for version 4.0:
---------------------------------------------------------

 ** A graphical user interface is now the default when running Octave
    interactively.  The start-up option --no-gui will run the familiar
    command line interface, and still allows use of the GUI dialogs and
    qt plotting toolkit.  The option --no-gui-libs runs a minimalist
    command line interface that does not link with the Qt libraries and
    uses the fltk toolkit for plotting.

 ** Octave now uses OpenGL graphics with Qt widgets by default.  If OpenGL
    libraries are not available when Octave is built, gnuplot is used.
    You may choose to use the fltk or gnuplot toolkit for graphics by
    executing the command

      graphics_toolkit ("fltk")
        OR
      graphics_toolkit ("gnuplot")

    Adding such a command to your ~/.octaverc file will set the default
    for each session.

 ** A new syntax for object oriented programming termed classdef has been
    introduced.  See the manual for more extensive documentation of the
    classdef interface.

    New keywords:

      classdef      endclassdef
      enumeration   endenumeration
      events        endevents
      methods       endmethods
      properties    endproperties

 ** New audio functions and classes:

      audiodevinfo  audioread      sound
      audioinfo     audiorecorder  soundsc